# fselect

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: fselect.py
src/fselect/: fselect.py
tests/: tests.py
