[tool.poetry]
name = "fselect"
version = "1.0.0"
description = "Feature Selection for Clustering"
authors = ["Billodal Roy <billodalroy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.26.2"
pandas = "^2.1.4"
sklearn = "^0.0.post12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
