[tool.poetry]
name = "fselect"
version = "1.0.4"
description = "Feature Selection for Clustering"
authors = ["Billodal Roy <billodalroy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.20"
pandas = "^2.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
